--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -186,9 +186,9 @@ body {
     src: url(../fonts/SingaporeSling-ez7O.otf);
 }
 
-// .form-control {
-//     font-family: SingaporeSling;
-// }
+.form-control {
+    font-family: SingaporeSling;
+}
 
 .placeholder-font::placeholder{
     font-family: SingaporeSling;
