--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,229 +11288,175 @@ textarea.form-control-lg {
   }
 }
 body {
-  overflow-x: hidden;
+  font-family: "Inter", sans-serif;
+  background-color: white;
 }
 
-.bg-overlay {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/Ferrari-SF90-Stradale.jpg?880887fbd4b472d05beb058760354cd6);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  color: #fff;
-  padding-top: 0px;
+#map {
+  height: 500px;
+  /* The height is 400 pixels */
+  /* The width is the width of the web page */
 }
 
-@media only screen and (min-width: 1080px) {
-  .carousel-item img {
-    height: 100vh;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-
-  .bg-overlay {
-    height: 100vh;
-  }
-
-  .carousel-caption {
-    padding: 0 0;
-  }
-
-  .carousel-caption .typewriter h1, .carousel-caption .typewriter .h1 {
-    font-size: calc(20px + 4vw);
-  }
-}
-@media only screen and (max-width: 1080px) {
-  .carousel-item img {
-    height: 60vh;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-
-  .bg-overlay {
-    height: 60vh;
-  }
-
-  .carousel-caption {
-    padding: 0 0;
-  }
-
-  .carousel-caption .typewriter h1, .carousel-caption .typewriter .h1 {
-    font-size: calc(24px + 1vw);
-  }
-}
-.navbar .navbar-nav .nav-link {
-  color: #000;
-  font-size: 0.9em;
+/* NAVBAR */
+#navigation {
+  color: white;
 }
 
-.navbar .navbar-nav .nav-link:hover {
-  background-color: #bd1e02;
-  color: #fff;
+/* Isn't working idk why
+https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
+*/
+.nav-black .nav-link {
+  color: black;
+  background-color: white;
 }
 
-.navbar .navbar-nav .nav-link {
-  padding: 0.6em;
+.nav-black .nav-link.active {
+  color: white;
+  background-color: black;
 }
 
-.navbar .navbar-brand {
-  padding: 0 0.6em;
+/* Profile Pictures */
+#profile-image {
+  border: 4px black solid;
+  border-radius: 12%;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  /* FIGURE OUT HOW TO USE BOTTOM */
+  margin-top: 8.5rem;
 }
 
-@media only screen and (min-width: 992px) {
-  .navbar {
-    padding: 0;
-  }
-
-  .navbar .navbar-nav .nav-link {
-    padding: 1.4em 0.7em;
-  }
-
-  .navbar .navbar-brand {
-    padding: 0 0.8em;
-  }
-}
-.navbar .navbar-nav .nav-link {
-  padding: 1.4em 0.7em;
-  transition: all 0.3s;
+/* CLASSES */
+/* LOGO */
+.logo-img {
+  width: 3em;
+  margin-left: 5em;
 }
 
-.navbar .dropdown-item:hover {
-  background-color: #bd1e02;
-  color: #fff;
+/* ARTIST PROFILE */
+#artist-profile {
+  position: relative;
 }
 
-.navbar .dropdown-item {
-  padding: 1em 1em;
+.artist-stats {
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.navbar .dropdown-menu {
-  padding: 0.2em;
+#artist-artworks {
+  border-right: 2px grey solid;
+  padding-right: 1rem;
 }
 
-.card {
-  transition: all 0.3s ease;
+#artist-ranking {
+  padding: 0 2.2rem;
+}
+
+#artist-events {
+  border-left: 2px grey solid;
+  padding-left: 1rem;
+}
+
+#artist-socials {
+  text-align: center;
+  margin: 3em 0;
+}
+
+.social:hover {
+  color: white;
+}
+
+/* BANNER */
+#banner-image {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 200px;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+}
+
+/* Artist Shit */
+.page-feature {
+  width: 70%;
+  margin: auto;
+}
+
+.tabcontent {
+  display: none;
+}
+
+.main-tabgroup {
   cursor: pointer;
 }
 
-.card:hover {
-  box-shadow: 5px 6px 6px 2px #d9dde0;
-  transform: scale(1.1);
-  z-index: 999;
+.main-tabgroup:hover {
+  color: white;
+  background-color: #28231d;
+  transition-duration: 0.4s;
 }
 
-.card-hover-disable {
-  pointer-events: none;
+/* SEPRATOR BETWEEN SEARCH AND EXPLORE BUTTONS. PLEASE CHANGE OR EXPLORE */
+.spacing {
+  height: 60px;
 }
 
-.card-img-top-square-edges {
-  border-radius: 0%;
+.empty-box {
+  width: 400px;
+  height: auto;
 }
 
-.typewriter h1, .typewriter .h1 {
-  overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  border-right: 0.09em solid #ff2800;
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  margin: 0 auto;
-  /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0em;
-  /* Adjust as needed */
-  font-style: oblique;
-  -webkit-animation: typing 3s steps(25, end), blink-caret 0.85s step-end infinite;
-          animation: typing 3s steps(25, end), blink-caret 0.85s step-end infinite;
+.gradient-custom-2 {
+  /* fallback for old browsers */
+  background: #fccb90;
+  /* Chrome 10-25, Safari 5.1-6 */
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
-/* The typing effect */
-@-webkit-keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
+@media (min-width: 768px) {
+  .gradient-form {
+    height: 100vh !important;
   }
 }
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
+@media (min-width: 769px) {
+  .gradient-custom-2 {
+    border-top-right-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
   }
 }
-/* The typewriter cursor effect */
-@-webkit-keyframes blink-caret {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #ff2800;
-  }
+#map {
+  height: 500px;
+  /* The height is 400 pixels */
+  /* The width is the width of the web page */
 }
-@keyframes blink-caret {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #ff2800;
-  }
-}
-.carousel-caption {
-  color: #fff;
-  text-align: center;
+
+.radio_background {
   display: flex;
-  justify-content: center;
-  bottom: 44%;
+  background: #f2f1f1;
+  border-radius: 20px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.card-disable-hover {
-  pointer-events: none;
+.radio_hide {
+  display: none;
 }
 
-.login-header {
-  color: #fff;
-  font-size: calc(20px + 4vw);
-  font-family: SingaporeSling;
+.radio_style {
+  border-radius: 20px;
+  padding: 3px 10px 6px 10px;
+  margin: 8px 10px 8px 10px;
   text-align: center;
+  cursor: pointer;
+  transition: background 0.1s;
 }
 
-@font-face {
-  font-family: SingaporeSling;
-  src: url(/fonts/SingaporeSling-ez7O.otf?ce0485aff52e8dd6d12c90bceb887208);
-}
-.form-control {
-  font-family: SingaporeSling;
-}
-
-.placeholder-font::-moz-placeholder {
-  font-family: SingaporeSling;
-}
-
-.placeholder-font:-ms-input-placeholder {
-  font-family: SingaporeSling;
-}
-
-.placeholder-font::placeholder {
-  font-family: SingaporeSling;
-}
-
-@media only screen and (min-width: 800px) {
-  .custom-form-width {
-    width: 35%;
-  }
-}
-.btn-outline-skobeloff {
-  color: #007474;
-  border-color: #007474;
-}
-
-.btn-outline-skobeloff:hover {
-  color: #fff;
-  background-color: #007474;
-  border-color: #007474;
-}
-
-.img-overlay {
-  background-color: #000;
+.radio_hide:checked + .radio_style {
+  background: rgb(214, 171, 204);
 }
