feat: added artwork upload capability

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -350,7 +350,7 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
     
 @media (min-width: 768px) {
     .gradient-form {
-          height: 100vh !important;
+        //   height: 100vh !important;
         }
 }
 @media (min-width: 769px) {
