--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -293,6 +293,22 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
 }
 
 /* ARTWORK POPUP */
+// .cd-popup-trigger {
+//   display: block;
+//   width: 170px;
+//   height: 50px;
+//   line-height: 50px;
+//   margin: 3em auto;
+//   text-align: center;
+//   color: #FFF;
+//   font-size: 14px;
+//   font-size: 0.875rem;
+//   font-weight: bold;
+//   text-transform: uppercase;
+//   border-radius: 50em;
+//   background: #35a785;
+// }
+
 // .cd-popup {
 //     position: fixed;
 //     left: 0;
@@ -432,6 +448,7 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
 
 .tabcontent {
     display: none;
+    color: #f8fafc;
 }
 
 .main-tabgroup {
