--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -215,7 +215,32 @@
 //     background-color: #000;
 // }
 
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #4e1112;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+}
 
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item {
+  color: #fff;
+}
+
+.dropdown-menu .dropdown-item:hover {
+  color: #4e1112;
+}
+
+.dropdown:hover .btn {
+  color: #4e1112 !important;
+}
          
 .navbar {
   background-image: linear-gradient(to right,  #1d242e 0%, #324153  46%, #50708d  100%);
@@ -459,6 +484,10 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
 //     -o-transform: translateY(0);
 //     transform: translateY(0);
 // }
+
+.vh-50 {
+  height: 50vh;
+}
 
 /* BANNER */
 #banner-image{
