--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -247,13 +247,16 @@
 }
          
 .navbar {
-  background-image: linear-gradient(to right,  #1d242e 0%, #324153  46%, #50708d  100%);
+  background-image: linear-gradient(to right,  #1d242e 0%, #40546c  46%, #5582ac  75%, #50708d  100%);
 }
 
 .navbar-brand{
   font-weight: 700;
   font-size: 25px;
+}
 
+.navbar-nav .nav-link{
+  font-size: 16px;
 }
 
 #nav-sot{
@@ -272,7 +275,7 @@ footer {
 
 // NAVBAR
 .underlineHover:hover {
-  border-bottom: #fff 2px solid;
+  color: #4e1112;
 }
 
 body{
