--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,185 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+
+// LOG IN PAGE
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.login-section {
+  position: relative;
+  min-height: 100vh;
+  // background-color: #f8dd30;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.login-section .container {
+  position: relative;
+  width: 800px;
+  // height: 500px;
+  height: 700px;
+  background: #fff;
+  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.login-section .container .user {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.login-section .container .user .imgBx {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  background: #f5f5f5cc;
+  transition: 0.5s;
+}
+
+.login-section .container .user .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.login-section .container .user .formBx {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  transition: 0.5s;
+}
+
+.login-section .container .user .formBx form h2 {
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.login-section .container .user .formBx form input {
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  background: #f5f5f5;
+  color: #333;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  margin: 8px 0;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 300;
+}
+
+.login-section .container .user .formBx form input[type='submit'] {
+  max-width: 100px;
+  background: #677eff;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.5s;
+}
+
+.login-section .container .user .formBx form .signup {
+  position: relative;
+  margin-top: 20px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #555;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+.login-section .container .user .formBx form .signup a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #677eff;
+}
+
+.login-section .container .signupBx {
+  pointer-events: none;
+}
+
+.login-section .container.active .signupBx {
+  pointer-events: initial;
+}
+
+.login-section .container .signupBx .formBx {
+  left: 100%;
+}
+
+.login-section .container.active .signupBx .formBx {
+  left: 0;
+}
+
+.login-section .container .signupBx .imgBx {
+  left: -100%;
+}
+
+.login-section .container.active .signupBx .imgBx {
+  left: 0%;
+}
+
+.login-section .container .signinBx .formBx {
+  left: 0%;
+}
+
+.login-section .container.active .signinBx .formBx {
+  left: 100%;
+}
+
+.login-section .container .signinBx .imgBx {
+  left: 0%;
+}
+
+.login-section .container.active .signinBx .imgBx {
+  left: -100%;
+}
+
+@media (max-width: 991px) {
+  .login-section .container {
+    max-width: 400px;
+  }
+
+  .login-section .container .imgBx {
+    display: none;
+  }
+
+  .login-section .container .user .formBx {
+    width: 100%;
+  }
+}
+
+
+ 
+
 // body {
 //     overflow-x: hidden;
     
@@ -906,6 +1085,24 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
   svg {
     margin: auto;
     text-align: center;
+  }
+
+  .banana{
+    stroke-width: 3px;
+    stroke-dashoffset: -2000;
+    stroke-dasharray: 2000;
+    -webkit-animation-name: monkey;
+            animation-name: monkey;
+    -webkit-animation-duration: 5s;
+            animation-duration: 5s;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1;
+    animation-direction: reverse;
+    -webkit-animation-timing-function: ease-ease;
+            animation-timing-function: ease-ease;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+
   }
   
   .monkey {
