fix: fixed login sign up issue

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -394,6 +394,16 @@
 //     background-color: #000;
 // }
 
+// for invalid validation
+.was-validated .form-control:invalid, .form-control.is-invalid {
+  border-color: #dc3545 !important;
+  padding-right: calc(1.6em + 0.75rem) !important;
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='#{$form-feedback-icon-invalid-color}'><circle cx='6' cy='6' r='4.5'/><path stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/><circle cx='6' cy='8.2' r='.6' fill='#{$form-feedback-icon-invalid-color}' stroke='none'/></svg>") !important;
+  background-repeat: no-repeat !important;
+  background-position: right calc(0.4em + 0.1875rem) center !important;
+  background-size: calc(0.8em + 0.375rem) calc(0.8em + 0.375rem) !important;
+}
+
 .dropdown-menu {
   display: none;
   position: absolute;
