feat: updated monkey animation

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -915,7 +915,7 @@ https://www.codeply.com/go/WJdJv71mhX/bootstrap-4-tab-pills-with-custom-color
   }
   
   .monkey {
-    stroke: #324153;
+    stroke: #4e1112;
     max-width: 150px;
     stroke-width: 3px;
     stroke-dashoffset: -2000;
