feat: updated monkey animation

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11916,7 +11916,7 @@ svg {
 }
 
 .monkey {
-  stroke: #324153;
+  stroke: #4e1112;
   max-width: 150px;
   stroke-width: 3px;
   stroke-dashoffset: -2000;
