--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,12 +22,13 @@
 
 .login-section {
   position: relative;
-  min-height: 100vh;
+  height: 100%;
   // background-color: #f8dd30;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 20px;
+  min-width: 450px;
 }
 
 .login-section .container {
@@ -47,6 +48,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+
 }
 
 .login-section .container .user .imgBx {
@@ -169,6 +171,17 @@
 
 .login-section .container.active .signinBx .imgBx {
   left: -100%;
+}
+
+// LOG IN END
+
+.outer{
+  background-image: url("https://img.as-creation.com/app/items/s/366252.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  max-height: 100vh;
 }
 
 @media (max-width: 991px) {
@@ -462,6 +475,7 @@
 
 footer {
   background-image: linear-gradient(to left,  #1d242e 0%, #324153  46%, #50708d  100%);
+  height: 25vh;
 }
 
 .underlineHover:hover {
@@ -470,6 +484,9 @@ footer {
 
 body{
     font-family: 'Inter', sans-serif;
+    min-width: 400px;
+    overflow-x: auto;
+    position: relative;
 }
 
 #map {
