fix: changed url of about us bg

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -176,7 +176,7 @@
 // LOG IN END
 
 .outer{
-  background-image: url("https://img.as-creation.com/app/items/s/366252.jpg");
+  background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
