--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11339,7 +11339,7 @@ textarea.form-control-lg {
 }
 
 .outer {
-  background-image: url("https://img.as-creation.com/app/items/s/366252.jpg");
+  background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
   background-size: cover;
   max-height: 100vh;
 }
