--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -182,6 +182,7 @@
   -o-background-size: cover;
   background-size: cover;
   max-height: 100vh;
+  min-height: 75vh;
 }
 
 @media (max-width: 991px) {
@@ -407,6 +408,13 @@
 //     background-color: #000;
 // }
 
+html, body { height: 100%;}
+
+body > footer {
+  position: sticky;
+  top: 100vh;
+}
+
 // for invalid validation
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: #dc3545 !important;
@@ -475,7 +483,6 @@
 
 footer {
   background-image: linear-gradient(to left,  #1d242e 0%, #324153  46%, #50708d  100%);
-  height: 25vh;
 }
 
 .underlineHover:hover {
@@ -485,8 +492,6 @@ footer {
 body{
     font-family: 'Inter', sans-serif;
     min-width: 400px;
-    overflow-x: auto;
-    position: relative;
 }
 
 #map {
