feat: rbg header in homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11454,6 +11454,25 @@ body {
 }
 
 /* NAVBAR END */
+#first {
+  animation: color-change 6s linear infinite;
+  border-bottom: solid 5px #ff1493;
+}
+
+@keyframes color-change {
+  0%, 100% {
+    border-color: #ff1493;
+  }
+  25% {
+    border-color: #8b4513;
+  }
+  50% {
+    border-color: #0091EA;
+  }
+  75% {
+    border-color: #9400d3;
+  }
+}
 /* Profile Pictures */
 #profile-image {
   border-radius: 12%;
