--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -505,6 +505,35 @@ body{
 
 /* NAVBAR END */
 
+// START OF RGB first
+#first{
+  animation: color-change 6s linear infinite;
+  border-bottom:solid 5px #ff1493;
+}
+
+@keyframes color-change {
+  0%,100%{
+    border-color:#ff1493;
+  }
+
+  25%{
+    border-color:#8b4513;
+  }
+  
+  50%{
+    border-color:#0091EA;
+  }
+  
+  75%{
+    border-color:#9400d3;
+  }
+
+  // 100%{
+  //   border-color: #2ad254;
+  // }
+}
+
+// END OF RGB FIRST
 
 /* Profile Pictures */
 #profile-image{
