feat: changed "first" animation

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11456,21 +11456,22 @@ body {
 /* NAVBAR END */
 #first {
   animation: color-change 6s linear infinite;
-  border-bottom: solid 5px #ff1493;
+  -webkit-animation: color-change 6s linear infinite;
+  text-shadow: 5px 2px #c5c5c5;
 }
 
 @keyframes color-change {
   0%, 100% {
-    border-color: #ff1493;
+    color: #ff1493;
   }
   25% {
-    border-color: #8b4513;
+    color: #8b4513;
   }
   50% {
-    border-color: #0091EA;
+    color: #0091EA;
   }
   75% {
-    border-color: #9400d3;
+    color: #9400d3;
   }
 }
 /* Profile Pictures */
