feat: change logo

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -458,9 +458,9 @@ body > footer {
   background-color: #fff;
 }
          
-.navbar {
-  background-image: linear-gradient(to right,  #1d242e 0%, #40546c  46%, #5582ac  75%, #50708d  100%);
-}
+// .navbar {
+//   background-image: linear-gradient(to right,  #1d242e 0%, #40546c  46%, #5582ac  75%, #50708d  100%);
+// }
 
 .navbar-brand{
   font-weight: 700;
@@ -481,9 +481,9 @@ body > footer {
   font-size: 27px;
 }
 
-footer {
-  background-image: linear-gradient(to left,  #1d242e 0%, #324153  46%, #50708d  100%);
-}
+// footer {
+//   background-image: linear-gradient(to left,  #1d242e 0%, #324153  46%, #50708d  100%);
+// }
 
 .underlineHover:hover {
   color: #4e1112;
