might have wonky nav

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11342,7 +11342,7 @@ textarea.form-control-lg {
   background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
   background-size: cover;
   max-height: 100vh;
-  min-height: 75vh;
+  min-height: 80vh;
 }
 
 @media (max-width: 991px) {
@@ -11370,8 +11370,8 @@ body > footer {
 #footerimg {
   height: auto;
   width: 100%;
-  max-width: 300px;
-  min-width: 200px;
+  max-width: 200px;
+  min-width: 150px;
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
@@ -11394,7 +11394,7 @@ body > footer {
   margin: 0;
 }
 
-.dropdown:hover .dropdown-menu {
+.dropdown:click .dropdown-menu {
   display: block;
 }
 
@@ -11402,12 +11402,8 @@ body > footer {
   color: #fff;
 }
 
-.dropdown-menu .dropdown-item:hover {
-  color: #4e1112;
-}
-
-.dropdown:hover .btn {
-  color: #4e1112 !important;
+.underlineHover:hover {
+  border-bottom: solid white 2px;
 }
 
 .dropdown-item:active {
@@ -11421,16 +11417,6 @@ body > footer {
 
 .navbar-nav .nav-link {
   font-size: 17px;
-}
-
-#nav-sot {
-  text-decoration: line-through;
-}
-
-#nav-art {
-  background-color: #4e1112;
-  border: 1px solid white;
-  font-size: 27px;
 }
 
 ~ body {
@@ -11689,7 +11675,7 @@ body > footer {
   content: "";
   height: 4px;
   width: 75px;
-  background-color: #29B6F6;
+  background-color: black;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -11709,7 +11695,7 @@ body > footer {
 }
 
 .notification-list--unread {
-  border-left: 2px solid #29B6F6;
+  border-left: 3px solid black;
 }
 
 .notification-list .notification-list_content {
@@ -11717,9 +11703,8 @@ body > footer {
 }
 
 .notification-list .notification-list_content .notification-list_img img {
-  height: 48px;
-  width: 48px;
-  border-radius: 50px;
+  height: 52px;
+  width: 52px;
   margin-right: 20px;
 }
 
@@ -11738,10 +11723,8 @@ body > footer {
 
 .switch {
   position: relative;
-  display: inline-block;
   width: 3rem;
   height: 1.5rem;
-  margin: 0 2rem 0 2rem;
 }
 
 .switch input {
@@ -11779,7 +11762,7 @@ input:checked + .slider:before {
 }
 
 input:checked + .slider-1-1 {
-  background-color: #29B6F6;
+  background-color: darkslategrey;
 }
 
 .card a {
