--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -182,7 +182,7 @@
   -o-background-size: cover;
   background-size: cover;
   max-height: 100vh;
-  min-height: 75vh;
+  min-height: 80vh;
 }
 
 @media (max-width: 991px) {
@@ -418,8 +418,8 @@ body > footer {
 #footerimg{
   height: auto;
   width: 100%;
-  max-width: 300px;
-  min-width: 200px;
+  max-width: 200px;
+  min-width: 150px;
 }
 
 // for invalid validation
@@ -443,9 +443,9 @@ body > footer {
   margin: 0;
 }
 
-// NAVBAR START
+// NAVBAR STAR
 
-.dropdown:hover .dropdown-menu {
+.dropdown:click .dropdown-menu {
   display: block;
 }
 
@@ -453,13 +453,17 @@ body > footer {
   color: #fff;
 }
 
-.dropdown-menu .dropdown-item:hover {
-  color: #4e1112;
+// .dropdown-menu .dropdown-item:hover {
+//   color: #4e1112;
+// }
+
+// .dropdown:hover .btn {
+//   color: #4e1112 !important;
+// }
+.underlineHover:hover{
+  border-bottom: solid white 2px
 }
 
-.dropdown:hover .btn {
-  color: #4e1112 !important;
-}
 
 .dropdown-item:active {
   background-color: #fff;
@@ -478,15 +482,6 @@ body > footer {
   font-size: 17px;
 }
 
-#nav-sot{
-  text-decoration: line-through;
-}
-
-#nav-art{
-  background-color: #4e1112;
-  border: 1px solid white;
-  font-size: 27px;
-}
 
 // footer {
 //   background-image: linear-gradient(to left,  #1d242e 0%, #324153  46%, #50708d  100%);
@@ -912,7 +907,7 @@ body{
     content: "";
     height: 4px;
     width: 75px;
-    background-color: #29B6F6;
+    background-color: black;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -937,7 +932,7 @@ body{
   }
   
   .notification-list--unread {
-    border-left: 2px solid #29B6F6;
+    border-left: 3px solid black;
   }
   
   .notification-list .notification-list_content {
@@ -947,9 +942,10 @@ body{
   }
   
   .notification-list .notification-list_content .notification-list_img img {
-    height: 48px;
-    width: 48px;
-    border-radius: 50px;
+    height: 52px;
+    width: 52px;
+    // border-radius: 50px;
+    // border: 1px solid grey;
     margin-right: 20px;
   }
   
@@ -968,10 +964,10 @@ body{
 
   .switch  {
     position: relative;
-    display: inline-block;
+    // display: inline-block;
     width: 3rem;
     height: 1.5rem;
-    margin: 0 2rem 0 2rem;
+    // margin: 0 2rem 0 2rem;
   }
   
   .switch input {
@@ -1013,7 +1009,7 @@ body{
   }
 
   input:checked + .slider-1-1 {
-    background-color: #29B6F6;
+    background-color: darkslategrey;
   }
 
   // end notifications
