modal pop up and overflow carousel

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1177,6 +1177,8 @@ body{
   
 //end state of the art animation
 
+
+//homepage
 .heart {
   width: 50px;
   height: 50px;
@@ -1221,8 +1223,8 @@ left: 15px;
 
 .card_wrapper{
   border-radius: 15px;
-  height: 550px;
-  /* width: 370px; */
+  height: 600px;
+  width: 370px;
   margin: 20px 10px 20px 10px;
   transition: all .2s ease-in-out;
 }
