fix: changed about us desc style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1033,9 +1033,9 @@ body{
   }
 
   #four-monkey{
-    background-color: #4e1112;
-    color: white;
-    padding: 4px;
+    color: #4e1112;
+    font-weight: bold;
+    font-size: 22px;
   }
 
   // Start monkey animation
