--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11780,9 +11780,9 @@ input:checked + .slider-1-1 {
 }
 
 #four-monkey {
-  background-color: #4e1112;
-  color: white;
-  padding: 4px;
+  color: #4e1112;
+  font-weight: bold;
+  font-size: 22px;
 }
 
 svg {
