--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11341,8 +11341,8 @@ textarea.form-control-lg {
 .outer {
   background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
   background-size: cover;
-  max-height: 100vh;
-  min-height: 80vh;
+  max-height: 100%;
+  min-height: 80%;
 }
 
 @media (max-width: 991px) {
