--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -181,8 +181,8 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  max-height: 100vh;
-  min-height: 80vh;
+  max-height: 100%;
+  min-height: 80%;
 }
 
 @media (max-width: 991px) {
