feat: changed bg image

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -176,7 +176,8 @@
 // LOG IN END
 
 .outer{
-  background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
+  // background-image: url("https://stateoftheart.blob.core.windows.net/wad2/366252.jpg");
+  background-image: url("https://raw.githubusercontent.com/waynekkkk/WAD2/master/public/images/background.jpg?token=GHSAT0AAAAAABZV475ZZO5PZBEP5GXULNSIY3NBVTA");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
