--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11342,7 +11342,7 @@ textarea.form-control-lg {
   background-image: url("https://stateoftheart.blob.core.windows.net/wad2/background.jpg");
   background-size: cover;
   max-height: 100%;
-  min-height: 80%;
+  min-height: 80vh;
 }
 
 @media (max-width: 991px) {
