--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -182,7 +182,7 @@
   -o-background-size: cover;
   background-size: cover;
   max-height: 100%;
-  min-height: 80%;
+  min-height: 80vh;
 }
 
 @media (max-width: 991px) {
