fix: changed pagination colour and added support for widescreen in discover page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11997,3 +11997,13 @@ svg {
   transform: translateY(0);
   opacity: 1;
 }
+
+.pagination .page-item .page-link {
+  color: #000 !important;
+}
+
+.page-item.active .page-link {
+  color: #fff !important;
+  background-color: #212529 !important;
+  border-color: #212529 !important;
+}
