fix: disable hover zoom for adding of artwork

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11596,10 +11596,16 @@ body > footer {
   border-radius: 15px;
 }
 
-.artwork-card:hover {
-  transform: scale(1.05);
+@media (min-width: 768px) {
+  .artwork-card:hover {
+    transform: scale(1.05) !important;
+  }
 }
-
+@media (max-width: 768px) {
+  .artwork-card:hover {
+    transform: none !important;
+  }
+}
 /* SEPRATOR BETWEEN SEARCH AND EXPLORE BUTTONS. PLEASE CHANGE OR EXPLORE */
 .spacing {
   height: 60px;
